# AutoBQP

./: AutoBQP.py  CMakeLists.txt  README.md  algorithm.cpp  compile  eval.cpp  grammar.cpp  instance.hpp  runner.cpp  solution.hpp
aac/: grammar  instances.txt  parameters.txt  scenario.txt  target-runner.py
aac/instances/: p3000-1.def  p4000-1.def  p5000-1.def  p6000-1.def  p7000-1.def
src/: CMakeLists.txt  compile  grammar.cpp  instance.hpp  report.hpp  runner.cpp  solution.hpp
